--- a/_layouts/website/summary.html
+++ b/_layouts/website/summary.html
@@ -38,8 +38,6 @@
     <li class="divider"></li>
 
     <li>
-        <a href="http://www.geekxh.com/">
-
-        </a>
+        <!-- <img src="./avatar.jpeg"  width="200" height="200"/> -->
     </li>
 </ul>
